# gh-actions-issue-test

./: .gitignore  README.md  pyproject.toml
.github/workflows/: issue_parser.yaml
src/ghactmod/: app.py
tests/: test_app.py
